# DragonRageEngine

./: CMakeLists.txt  DragonRage.sln
DragonRage/: DragonRage.vcxproj  DragonRage.vcxproj.filters  FirstScene.cpp  FirstScene.h  MainMenuScene.cpp  MainMenuScene.h  ShaderLoader.h
DragonRage/Scenes/: FirstScene.cpp  FirstScene.h  MainMenuScene.cpp  MainMenuScene.h
DragonRage/dependencies/includes/glad/: glad.h
DragonRage/dependencies/libraries/: assimp-vc143-mtd.exp  glfw3.lib
DragonRage/input/: InputHandler.cpp  InputHandler.h  camera.h
DragonRage/model/: Mazda.blend  monkey.fbx
DragonRage/shaders/: Shader.h  ShaderLoader.h  VAO.h  VBO.h  cube_frag_shader.glsl
DragonRage/src/: Scene.h  SceneManager.h  SysInit.cpp  SysState.H
DragonRage/window/: WindowManager.cpp  WindowManager.h
src/: EBO.h  InputHandler.cpp  InputHandler.h  Main.cpp  Scene.h  SceneManager.h  Shader.h  ShaderClass.cpp  VAO.h  VBO.cpp  VBO.h  glad.c
